--- a/admin-public-menu.html
+++ b/admin-public-menu.html
@@ -1,83 +1,85 @@
-<!-- ===== HF 管理：UI（統合版・改良版 完全版） ===== -->
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+<meta charset="UTF-8">
+<title>HF設定管理</title>
+<style>
+  body { font-family:'Noto Sans JP',sans-serif; background:#f1f5f9; color:#1e293b; }
+  h2 { font-size:20px; margin-bottom:12px; }
+  .panel { background:#fff; margin:16px 0; padding:20px; border-radius:12px; box-shadow:0 4px 12px rgba(0,0,0,.06); }
+  .panel-head { display:flex; justify-content:space-between; align-items:center; margin-bottom:14px; }
+  .panel-head h3 { font-size:16px; font-weight:600; color:#0f172a; }
+  .btn { padding:6px 12px; border:none; border-radius:6px; cursor:pointer; }
+  .btn.primary { background:#2563eb; color:#fff; font-weight:600; }
+  .preview-surface { border:2px dashed #cbd5e1; padding:16px; min-height:56px; border-radius:10px; background:#f8fafc; }
+  .edit-grid { display:grid; grid-template-columns:repeat(auto-fit,minmax(240px,1fr)); gap:14px; }
+  .field { display:flex; flex-direction:column; }
+  .field label { font-size:13px; color:#475569; margin-bottom:4px; font-weight:500; }
+  .hf-header a,.hf-footer a { text-decoration:none; color:inherit; padding:0 6px; }
+  table { width:100%; border-collapse:collapse; margin-top:10px; }
+  th,td { border-bottom:1px solid #e5e7eb; padding:8px; font-size:14px; }
+  th { background:#f1f5f9; text-align:left; font-weight:600; }
+  td input { width:100%; padding:4px; font-size:13px; }
+  .row-actions { display:flex; gap:6px; }
+  #toast-container { position:fixed; right:16px; bottom:16px; display:flex; flex-direction:column; gap:8px; z-index:9999; }
+  .toast { background:#111827; color:#fff; padding:10px 12px; border-radius:8px; box-shadow:0 8px 24px rgba(0,0,0,.18); font-size:14px; }
+  .toast.ok { background:#065f46; }
+  .toast.err { background:#7f1d1d; }
+</style>
+</head>
+<body>
 <div id="hf-admin-root">
   <h2>ヘッダー & フッター 管理</h2>
 
-  <!-- ヘッダー設定 -->
   <section class="panel">
     <div class="panel-head">
       <h3>ヘッダー プレビュー</h3>
-      <div class="panel-actions">
-        <button id="saveHeaderBtn" class="btn primary">保存</button>
-      </div>
+      <button id="saveHeaderBtn" class="btn primary">保存</button>
     </div>
     <div id="headerPreview" class="preview-surface"></div>
-
     <div class="edit-grid">
       <div class="field"><label>会社名</label><input id="h_company_name" /></div>
       <div class="field"><label>ロゴURL</label><input id="h_logo_url" /></div>
       <div class="field"><label>ロゴ高さ(px)</label><input type="number" id="h_logo_height" /></div>
-
-      <div class="field"><label>ロゴ位置</label>
-        <select id="h_logo_alignment"><option>left</option><option>center</option><option>right</option></select>
-      </div>
-      <div class="field"><label>会社名位置</label>
-        <select id="h_company_alignment"><option>left</option><option>center</option><option>right</option></select>
-      </div>
-      <div class="field"><label>ナビ位置</label>
-        <select id="h_nav_alignment"><option>left</option><option>center</option><option>right</option></select>
-      </div>
-
+      <div class="field"><label>ロゴ位置</label><select id="h_logo_alignment"><option>left</option><option>center</option><option>right</option></select></div>
+      <div class="field"><label>会社名位置</label><select id="h_company_alignment"><option>left</option><option>center</option><option>right</option></select></div>
+      <div class="field"><label>ナビ位置</label><select id="h_nav_alignment"><option>left</option><option>center</option><option>right</option></select></div>
       <div class="field"><label>背景色</label><input type="color" id="h_bg_color" /></div>
       <div class="field"><label>背景グラデーション</label><input id="h_bg_gradient" /></div>
       <div class="field"><label>文字色</label><input type="color" id="h_text_color" /></div>
-
       <div class="field"><label>フォント</label><input id="h_font_family" placeholder="Noto Sans JP" /></div>
       <div class="field"><label>文字サイズ(px)</label><input type="number" id="h_font_size" /></div>
-      <div class="field"><label>文字太さ</label>
-        <select id="h_font_weight"><option>normal</option><option>bold</option></select>
-      </div>
-
+      <div class="field"><label>文字太さ</label><select id="h_font_weight"><option>normal</option><option>bold</option></select></div>
       <div class="field"><label>リンク間隔(px)</label><input type="number" id="h_link_spacing" /></div>
       <div class="field"><label>パディング</label><input id="h_padding" /></div>
     </div>
   </section>
 
-  <!-- フッター設定 -->
   <section class="panel">
     <div class="panel-head">
       <h3>フッター プレビュー</h3>
-      <div class="panel-actions">
-        <button id="saveFooterBtn" class="btn primary">保存</button>
-      </div>
+      <button id="saveFooterBtn" class="btn primary">保存</button>
     </div>
     <div id="footerPreview" class="preview-surface"></div>
-
     <div class="edit-grid">
       <div class="field"><label>コピーライト</label><input id="f_footer_text" /></div>
-      <div class="field"><label>配置</label>
-        <select id="f_footer_alignment"><option>left</option><option>center</option><option>right</option></select>
-      </div>
+      <div class="field"><label>配置</label><select id="f_footer_alignment"><option>left</option><option>center</option><option>right</option></select></div>
       <div class="field"><label>背景色</label><input type="color" id="f_bg_color" /></div>
       <div class="field"><label>背景グラデーション</label><input id="f_bg_gradient" /></div>
       <div class="field"><label>文字色</label><input type="color" id="f_text_color" /></div>
       <div class="field"><label>フォント</label><input id="f_font_family" /></div>
       <div class="field"><label>文字サイズ(px)</label><input type="number" id="f_font_size" /></div>
-      <div class="field"><label>文字太さ</label>
-        <select id="f_font_weight"><option>normal</option><option>bold</option></select>
-      </div>
+      <div class="field"><label>文字太さ</label><select id="f_font_weight"><option>normal</option><option>bold</option></select></div>
       <div class="field"><label>リンク間隔(px)</label><input type="number" id="f_link_spacing" /></div>
       <div class="field"><label>固定表示</label><input type="checkbox" id="f_footer_fixed" /></div>
       <div class="field"><label>パディング</label><input id="f_padding" /></div>
     </div>
   </section>
 
-  <!-- メニュー管理 -->
   <section class="panel">
     <div class="panel-head">
       <h3>メニュー管理</h3>
-      <div class="panel-actions">
-        <button id="addMenuBtn" class="btn">新規追加</button>
-      </div>
+      <button id="addMenuBtn" class="btn">新規追加</button>
     </div>
     <div class="table-wrap">
       <table id="menuTable">
@@ -87,41 +89,34 @@
     </div>
   </section>
 </div>
-
 <div id="toast-container"></div>
-
-<style>
-  body { font-family:'Noto Sans JP',sans-serif;color:#1e293b; }
-  .panel { background:#fff;margin:16px 0;padding:20px;border-radius:12px;box-shadow:0 4px 12px rgba(0,0,0,.06); }
-  .panel-head { display:flex;justify-content:space-between;align-items:center;margin-bottom:14px; }
-  .panel-head h3 { font-size:16px;font-weight:600;color:#0f172a; }
-  .btn { padding:6px 12px;border:none;border-radius:6px;cursor:pointer; }
-  .btn.primary { background:#2563eb;color:#fff;font-weight:600; }
-  .preview-surface { border:2px dashed #cbd5e1;padding:16px;min-height:56px;border-radius:10px;background:#f8fafc; }
-  .hf-header a,.hf-footer a { text-decoration:none;color:inherit;padding:0 6px; }
-  table { width:100%;border-collapse:collapse; }
-  th,td { border-bottom:1px solid #e5e7eb;padding:8px;font-size:14px; }
-  th { background:#f1f5f9;text-align:left; }
-  td input { width:100%;padding:4px;font-size:13px; }
-  .row-actions { display:flex;gap:6px; }
-  #toast-container { position:fixed;right:16px;bottom:16px;display:flex;flex-direction:column;gap:8px;z-index:9999; }
-  .toast { background:#111827;color:#fff;padding:10px 12px;border-radius:8px;box-shadow:0 8px 24px rgba(0,0,0,.18); }
-  .toast.ok { background:#065f46; }
-  .toast.err { background:#7f1d1d; }
-</style>
 
 <script>
 (async function(){
   const SUPABASE_URL="https://htnmjsqgoapvuanrsuma.supabase.co";
   const SUPABASE_ANON="eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imh0bm1qc3Fnb2FwdnVhbnJzdW1hIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTUzMzI3MDEsImV4cCI6MjA3MDkwODcwMX0.1AACTWZmChfmIIfBad0sf-hLV2bnaUt7bVURXnd0uKA";
+
   function toast(msg,type="ok"){const w=document.getElementById("toast-container");const e=document.createElement("div");e.className="toast "+type;e.textContent=msg;w.appendChild(e);setTimeout(()=>{e.style.opacity="0";setTimeout(()=>e.remove(),300)},2000);}
+
   if(!window.supabase){await new Promise(res=>{const s=document.createElement("script");s.src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2";s.onload=res;document.head.appendChild(s);});}
   const db=window.supabase.createClient(SUPABASE_URL,SUPABASE_ANON);
+
   let menus=[];
   async function fetchMenus(){let {data}=await db.from("public_menus").select("*");menus=data||[];return menus;}
-  function renderHeader(d){const links=menus.filter(m=>m.show_header&&m.is_active).sort((a,b)=>a.sort_order-b.sort_order);const nav=links.map(m=>`<a href="${m.url}">${m.title}</a>`).join("");document.getElementById("headerPreview").innerHTML=`<div class="hf-header" style="background:${d.bg_gradient||d.bg_color};color:${d.text_color};font-family:${d.font_family};font-size:${d.font_size}px;font-weight:${d.font_weight};padding:${d.padding};display:flex;align-items:center;justify-content:space-between;"><div style="text-align:${d.logo_alignment};">${d.logo_url?`<img src="${d.logo_url}" style="height:${d.logo_height}px">`:""}</div><div style="text-align:${d.company_alignment};">${d.company_name||""}</div><nav style="text-align:${d.nav_alignment};">${nav}</nav></div>`;}
+
+  function renderHeader(d){const links=menus.filter(m=>m.show_header&&m.is_active).sort((a,b)=>a.sort_order-b.sort_order);const nav=links.map(m=>`<a href="${m.url}">${m.title}</a>`).join("");document.getElementById("headerPreview").innerHTML=`<div class="hf-header" style="background:${d.bg_gradient||d.bg_color};color:${d.text_color};font-family:${d.font_family};font-size:${d.font_size}px;font-weight:${d.font_weight};padding:${d.padding};display:flex;align-items:center;justify-content:space-between;"><div>${d.logo_url?`<img src="${d.logo_url}" style="height:${d.logo_height}px">`:""}</div><div style="text-align:${d.company_alignment};">${d.company_name||""}</div><nav style="text-align:${d.nav_alignment};gap:${d.link_spacing}px;">${nav}</nav></div>`;}
   function renderFooter(d){const links=menus.filter(m=>m.show_footer&&m.is_active).sort((a,b)=>a.sort_order-b.sort_order);const nav=links.map(m=>`<a href="${m.url}">${m.title}</a>`).join("");document.getElementById("footerPreview").innerHTML=`<div class="hf-footer" style="background:${d.bg_gradient||d.bg_color};color:${d.text_color};font-family:${d.font_family};font-size:${d.font_size}px;font-weight:${d.font_weight};padding:${d.padding};text-align:${d.footer_alignment};${d.footer_fixed?"position:sticky;bottom:0;":""}"><div>${d.footer_text||""}</div><nav>${nav}</nav></div>`;}
-  function renderMenusTable(rows){const tb=document.querySelector("#menuTable tbody");tb.innerHTML=rows.map(m=>`<tr data-id="${m.id||""}"><td>${m.id||""}</td><td><input class="m_title" value="${m.title||""}"></td><td><input class="m_url" value="${m.url||""}"></td><td><input class="m_sort" type="number" value="${m.sort_order||0}"></td><td><input class="m_sh" type="checkbox" ${m.show_header?"checked":""}></td><td><input class="m_sf" type="checkbox" ${m.show_footer?"checked":""}></td><td><input class="m_active" type="checkbox" ${m.is_active?"checked":""}></td><td class="row-actions"><button class="btn m_save">保存</button>${m.id?'<button class="btn m_del">削除</button>':""}</td></tr>`).join("");tb.querySelectorAll(".m_save").forEach(b=>b.onclick=async e=>{const tr=e.target.closest("tr");const id=tr.dataset.id;const p={title:tr.querySelector(".m_title").value,url:tr.querySelector(".m_url").value,sort_order:+tr.querySelector(".m_sort").value,show_header:tr.querySelector(".m_sh").checked,show_footer:tr.querySelector(".m_sf").checked,is_active:tr.querySelector(".m_active").checked};if(id){await db.from("public_menus").update(p).eq("id",id);toast("更新しました");}else{await db.from("public_menus").insert(p);toast("追加しました");}renderMenusTable(await fetchMenus());renderHeader({});renderFooter({});});tb.querySelectorAll(".m_del").forEach(b=>b.onclick=async e=>{const tr=e.target.closest("tr");const id=tr.dataset.id;if(confirm("削除しますか？")){await db.from("public_menus").delete().eq("id",id);toast("削除しました");tr.remove();renderHeader({});renderFooter({});}});}
+
+  function renderMenusTable(rows){const tb=document.querySelector("#menuTable tbody");tb.innerHTML=rows.map(m=>`<tr data-id="${m.id||""}"><td>${m.id||""}</td><td><input class="m_title" value="${m.title||""}"></td><td><input class="m_url" value="${m.url||""}"></td><td><input class="m_sort" type="number" value="${m.sort_order||0}"></td><td><input class="m_sh" type="checkbox" ${m.show_header?"checked":""}></td><td><input class="m_sf" type="checkbox" ${m.show_footer?"checked":""}></td><td><input class="m_active" type="checkbox" ${m.is_active?"checked":""}></td><td class="row-actions"><button class="btn m_save">保存</button>${m.id?'<button class="btn m_del">削除</button>':""}</td></tr>`).join("");
+    tb.querySelectorAll(".m_save").forEach(btn=>btn.addEventListener("click",async e=>{const tr=e.target.closest("tr");const id=tr.dataset.id;const payload={title:tr.querySelector(".m_title").value,url:tr.querySelector(".m_url").value,sort_order:+tr.querySelector(".m_sort").value,show_header:tr.querySelector(".m_sh").checked,show_footer:tr.querySelector(".m_sf").checked,is_active:tr.querySelector(".m_active").checked};if(id){await db.from("public_menus").update(payload).eq("id",id);toast("更新しました");}else{await db.from("public_menus").insert(payload);toast("追加しました");}renderMenusTable(await fetchMenus());renderHeader(currentHeader);renderFooter(currentFooter);}));
+    tb.querySelectorAll(".m_del").forEach(btn=>btn.addEventListener("click",async e=>{const tr=e.target.closest("tr");const id=tr.dataset.id;if(confirm("削除しますか？")){await db.from("public_menus").delete().eq("id",id);toast("削除しました","ok");tr.remove();renderHeader(currentHeader);renderFooter(currentFooter);}}));
+  }
   document.getElementById("addMenuBtn").onclick=()=>{menus.push({});renderMenusTable(menus);};
+
+  let currentHeader={company_name:"",logo_height:48,bg_color:"#111827",text_color:"#fff",font_family:"Noto Sans JP",font_size:16,font_weight:"normal",link_spacing:16,padding:"8px 16px"};
+  let currentFooter={footer_text:"© WaJu",footer_alignment:"center",bg_color:"#111827",text_color:"#fff",font_family:"Noto Sans JP",font_size:14,font_weight:"normal",padding:"8px 16px"};
+
   renderMenusTable(await fetchMenus());
+  renderHeader(currentHeader);renderFooter(currentFooter);
 })();</script>
+</body></html>
